# emseepee

./: .codespellignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  commitlint.config.js  pyproject.toml
docs/agents/: knowledge.md
docs/developer/: README.md  architecture.md  getting-started.md  viewer.html
docs/user/: README.md
hack/: config.yaml
src/: __init__.py
src/config/: __init__.py  config.py
src/emseepee/: __init__.py  main.py
src/emseepee/gmail/: __init__.py  mailbox_data.py  manager.py  service.py  tools.py
tests/gmail/: __init__.py  test_config.py  test_gmail_mcp.py  test_mcp.sh
